--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -72,3 +72,26 @@
     align-items: center;
     font-size: 1.1rem;
 }
+
+.user_action{
+    position: relative;
+}
+
+.user_menu{
+    position: absolute;
+    right: 0;
+    top: 40px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 15px;
+    min-width: 150px;
+    box-shadow: var(--shadow);
+    border-radius: 5px;
+}
+
+.user_menu span:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
