--- a/src/pages/health/health.css
+++ b/src/pages/health/health.css
@@ -216,7 +216,7 @@
 }
 
 .view_doc_left{
-    width: 280px;
+    flex: 1;
     display: flex;
     flex-direction: column;
     /* padding-top: 80px; */
@@ -256,11 +256,11 @@
 }
 
 .doc_body{
-    width: 100%;
+    flex: 2;
 }
 
 .doc_right{
-    width: 50%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 15px;
