--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--bg);
+    justify-content: space-between;
     
 }
 
@@ -33,6 +34,7 @@
 
 .home_body{
     display: flex;
+    flex-direction: column;
     flex: 4;
     gap: 15px;
     /* border: 1px solid rgb(133, 96, 96); */
