--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,7 +1,7 @@
 .main{
     display: flex;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: space-between;
     background-color: var(--bg);
@@ -18,10 +18,11 @@
 .main_b_left{
     width: 50%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     justify-content: center;
     align-items: center;
     gap: 15px;
+    padding: 30px;
 }
 
 .main_b_card{ 
@@ -35,6 +36,16 @@
     box-shadow: inset 6px 6px 6px #a8d3fb, inset -6px -6px 6px #f3f9ff;
 
 
+}
+
+.register_nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid red; */
+    width: 90%;
+    margin: 15px auto;
+   
 }
 
 .main_b_card p{
@@ -174,12 +185,15 @@
         justify-content: center;
     }
     .main_b_left{
-        width: 100%;
+        width: 95%;
         display: grid;
-        grid-template-columns: repeat(auto-fit, 120px);
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
         justify-content: center;
         align-items: center;
         gap: 5px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+        padding: 0;
     }
     
     .main_b_card{ 
@@ -202,7 +216,7 @@
         line-height: 1.3;
         font-weight: 400;
         padding: 10px;
-        width: 100%;
+        /* width: 100%; */
         margin: 10px auto;
     }
     .m_card_svg{
@@ -229,6 +243,39 @@
         text-align: center;
         /* border: 1px solid red; */
         margin: 0 auto;
+    }
+
+
+    .login{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: space-between;
+        margin: 25px 0;
+        gap: 5px;
+    }
+    
+    .ma_b_title{
+        font-size: 4rem;
+        /* margin-top: 55px; */
+    }
+
+    .main_footer{
+        height: fit-content;
+        background-color: var(--primary);
+        display: inline-block;
+        /* width: 100%; */
+        align-items: center;
+        justify-content: center;
+        padding: 20PX;
+        color: var(--sec);
+    }
+
+    .m_f_logo{
+        display: none;
     }
 
     /* .ma_b_title{
