--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -58,9 +58,10 @@
 
 
 .post_grids{
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
+    display: flex;
+    flex-direction: column-reverse;
+    /* grid-template-columns: 1fr;
+    justify-content: center; */
     gap: 15px;
     /* padding: 10px; */
    
@@ -262,6 +263,79 @@ audio{
     width: 600px;
 }
 
+
+.share_video_outer{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 20;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.shared_video{
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 25px;
+    min-width: 500px;
+    gap: 15px;
+    width: fit-content;
+    border-radius: 15px;
+}
+
+
+.card_image{
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 30vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card_image img{
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+}
+
+.new_user{
+    width: 35px;
+    height: 35px;
+    aspect-ratio: 1;
+}
+
+.new_user img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.new_users{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    /* width: 100%; */
+    /* border: 1px solid red; */
+}
+
+.view_post{
+    width: 95%;
+    margin: 0 auto;
+}
+
+/* .view_post_bofy{
+    border: 1px solid red;
+} */
+
+
 @media screen and (max-width: 740px){
   
 
@@ -297,6 +371,14 @@ audio{
     .share_text{
         display: flex;
         flex-direction: column;
+    }
+
+
+    .card_image{
+        /* border: 1px solid red; */
+        width: 100%;
+        height: 400px;
+      
     }
     
 }
