--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: space-between;
     padding: 15px;
-    background-color: var(--sec);
+    background-color: var(--primary);
     margin-top: 10px;
+    color: var(--bg);
 }
 
 
