--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -167,3 +167,12 @@
       transform: rotateZ(405deg);
     }
   }
+
+
+  /* @media screen and (max-width: 940px){
+    .input_search{
+     
+      width: 90%;
+      
+  }
+  } */
