--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -75,6 +75,9 @@
 
 .user_action{
     position: relative;
+    /* border: 1px solid red; */
+    padding-bottom: 15px;
+    margin-top: 15px;
 }
 
 .user_menu{
@@ -89,6 +92,10 @@
     min-width: 150px;
     box-shadow: var(--shadow);
     border-radius: 5px;
+}
+
+.user_menu span{
+    font-size: 1.2rem;
 }
 
 .user_menu span:hover{
