--- a/src/pages/nikah/nikah.css
+++ b/src/pages/nikah/nikah.css
@@ -92,6 +92,7 @@
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 15px;
     justify-content: center;
+   
     
 }
 
@@ -334,7 +335,7 @@
 @media screen and (max-width: 940px){
     .nikah_donated{
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         padding: 15px;
         gap: 15px;
         justify-content: center;
