--- a/src/pages/nikah/nikah.css
+++ b/src/pages/nikah/nikah.css
@@ -251,17 +251,34 @@
 }
 
 .nikah_view_bottom{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
+    display: flex;
+    flex-direction: column;
     margin-top: 5px;
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
     gap: 15px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.nikah_view_dec{
+    background-color: white;
+    padding: 30px;
+    width: 90%;
+    margin: 0 auto;
+    font-size: 1.2rem;
+}
+
+.nikah_pic{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .nikah_view_left{
     /* width: 30vw; */
-    height: 100%;
+    min-height: 70vh;
     position: relative;
+    background-color: white;
 }
 
 .nikah_view_action{
@@ -370,6 +387,7 @@
     .nikah_view_bottom{
         display: flex;
         flex-direction: column;
+        width: 100%;
        
     }
 
@@ -386,7 +404,7 @@
 
     .nikah_view_left{
         width: 100%;
-        height: 100%;
+        min-height: auto;
         position: relative;
     }
     
