--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -17,10 +17,19 @@
     align-items: center;
 }
 
+.profile_photo_edit{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    /* border: 1px solid red; */
+}
+
 .user_picture span{
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255,255,255,0.7);
     padding: 15px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .user_picture svg{
