--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -389,7 +389,7 @@ audio{
     .card_image{
         /* border: 1px solid red; */
         width: 100%;
-        height: 400px;
+        height: auto;
       
     }
     
