--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -158,6 +158,17 @@
     align-items: center;
 }
 
+.loading_wrapper{
+    background-color: var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+
+
 
 @media screen and (max-width: 940px){
     .home_wrapper{
