--- a/src/pages/messages/messages.css
+++ b/src/pages/messages/messages.css
@@ -7,7 +7,7 @@
 
 .messages_lists{
     flex: 1.5;
-    background-color: var(--sec);
+    background-color: white;
     height: 100%;
     position: sticky;
     top: 60px;
@@ -16,10 +16,10 @@
 }
 
 .mes_chatlists{
-    height: 77vh;
+    min-height: calc(100vh - 210px);
     padding-top: 25px;
     padding: 15px;
-    background-color: #c7e3ff;
+    background-color: white;
 }
 
 .messages_body{
@@ -63,6 +63,21 @@
     padding: 10px;
 }
 
+.pop_new_msg{
+    position: absolute;
+    width: 270px;
+    right: 40px;
+    background-color: white;
+    padding: 15px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 20;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
 .chat_body{
     display: flex;
     flex-direction: column;
@@ -70,9 +85,13 @@
 }
 
 .chat_rec_photo{
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
     aspect-ratio: 1;
+}
+
+.chat_member_name{
+    font-size: 1.2rem;
 }
 
 .chat_rec_photo img{
@@ -93,7 +112,7 @@
 
 .chatroom_head{
     display: flex;
-    height: 45px;
+    height: 60px;
     border-bottom: 3px solid var(--bg);
     background-color: var(--sec);
     align-items: center;
@@ -132,7 +151,7 @@
 
 .chat_messages{
     /* background-color: white; */
-    min-height: 75vh;
+    height: 75vh;
     margin-top: 5px;
     display: flex;
     flex-direction: column;
@@ -148,32 +167,242 @@
 
 .message_body{
     background-color: white;
-    padding: 20px;
+    padding: 15px;
     max-width: 700px;
     border-radius: 7px;
 }
 
 .mes_body_time{
     font-size: 0.8rem;
-    color: #aaa;
+    /* color: #aaa; */
     margin-top: 7px;
 }
 
+.pop_new_chat{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+      
+      
+  }
+  
+  .pop_new_chat span{
+      font-size: 1rem;
+     
+  }
 
-@media screen and (max-width: 440px){
+  .group_btns{
+    padding: 10px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+}
+
+.form_container{
+    /* width: 100%; */
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
+    min-height: 50px;
+    position: relative;
+    background-color: var(--sec);
+    /* border: 1px solid red; */
+}
+
+.form_inner_wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 7px;
+}
+
+.attach_wrapper{
+    position: absolute;
+    bottom: 50px;
+    width: 95%;
+    max-width: 450px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    height: auto;
+    background: white;
+    border-radius: 11px;   
+    padding: 20px;
+    margin: 0 auto;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    border: 1px solid #aaa;
+
+}
+
+
+.attach_items{
+    display: flex;
+    justify-content: space-between;
+}
+
+.attach_item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.attach_btns{
+    height: 50px;
+    width: 50px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background-color: #aaa;
+    color: white;
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+.form_outer{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    width: 100%;
+    padding: 7px;
+    background-color: white;
+    border-radius: 15px;
+    
+    
+}
+
+.btn_form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+}
+
+.btn_send_msg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary);
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    border: none;
+    font-size: 1.2rem;
+    color: rgb(230, 246, 254);;
+    /* width: 45px; */
+}
+
+.send_input{
+    width: 100%;
+    font-size: 1.1rem;
+    border: none;
+    outline: none;
+}
+
+.message_p{
+    font-size: 1.1rem;
+}
+
+.right{
+    background-color: var(--primary);
+}
+
+.received{    
+    text-align: left;
+    flex-direction: row;
+}
+
+.sent{    
+    flex-direction: row-reverse;   
+    text-align: right;
+    /* background-color: #3266a8; */
+    color: white;
+    align-items: flex-end;
+   
+}
+
+.right{
+    align-items: flex-end;
+}
+
+.chat_wrap{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.chat_wrleft{
+    display: flex;
+    gap: 7px;
+}
+
+.chat_la_time{
+    color: var(--primary);
+    font-size: 0.9rem;
+}
+
+.chat_text{
+    width: 18ch;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 1rem;
+    margin-left: 3px;
+}
+
+
+@media screen and (max-width: 940px){
     .messages_body{
       
         display: none;
     }
     .messages_lists{
         flex:none;
-        background-color: var(--sec);
+        /* background-color: var(--sec); */
         /* height: 100%; */
         position: static;
         width: 100%;
         /* top: 60px; */
         
     
+    }
+
+    .pop_new_msg{
+        position: fixed;
+        width: 100vw;
+        height: 150vh;
+        left: 0;
+        top: 55%;
+        background-color: rgba(0, 0, 0, 0.16);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 20;
+    }
+
+    .pop_new_chat{
+       
+        background-color: white;
+        height: fit-content;
+        padding: 20px;
+        border-radius: 3px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        
+        
+        
     }
 
     .main_messages{
@@ -189,7 +418,8 @@
 
     .chat_messages{
         /* background-color: white; */
-        min-height: 75vh;
+        height: calc(100vh - 280px);
+        overflow-y: scroll;
         margin-top: 5px;
         display: flex;
         flex-direction: column;
