--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
     height: 50px;
     position: sticky;
     top: 0;
-    background-color: var(--bg);
+    background-color: var(--primary);
     z-index: 15;
    
 }
@@ -18,7 +18,7 @@
     align-items: center;
     gap: 10px;
     text-align: left;
-    color: var(--primary);
+    color: white;
     /* padding: 15px; */
 }
 
@@ -35,8 +35,8 @@
 }
 
 .profile_img{
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 
 }
 
