--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -20,10 +20,11 @@
 }
 
 .home_sidebar{
-    flex: 1;
+    flex: 1.2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--primary);
     /* gap: 2vh; */
     height: calc(100vh - 80px);
     position: sticky;
@@ -193,11 +194,12 @@
     .home_sidebar{
         position:fixed;
         top: 70px;
-        height: 70vh;
-        background-color: var(--bg);
+        height: calc(100vh - 80px);
+       
         width: 80%;
         z-index: 10;
         padding: 15px;
+        font-size: 1.5rem;
        /* display: none; */
    
     }
