--- a/src/pages/messages/messages.css
+++ b/src/pages/messages/messages.css
@@ -116,8 +116,23 @@
     border-bottom: 3px solid var(--bg);
     background-color: var(--sec);
     align-items: center;
+    justify-content: space-between;
     padding-left: 5px;
+    
+}
+
+.chat_head_left{
+    display: flex;
+    align-items: center;
     gap: 10px;
+    
+}
+
+.chat_head_right{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding-right: 10px;
 }
 
 .chat_room_bottom{
