--- a/src/pages/messages/messages.css
+++ b/src/pages/messages/messages.css
@@ -106,7 +106,7 @@
     padding-left: 15px;
     border-bottom: 2px solid var(--bg);
     display: flex;
-    /* justify-content: center; */
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -194,18 +194,19 @@
 }
 
 .pop_new_chat{
-    width: 100%;
+    width: 95%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
       
       
   }
   
   .pop_new_chat span{
-      font-size: 1rem;
+      font-size: 1.5rem;
      
   }
 
@@ -378,6 +379,13 @@
     margin-left: 3px;
 }
 
+.chat_admin{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding-right: 10px;
+}
+
 
 @media screen and (max-width: 940px){
     .messages_body{
@@ -414,6 +422,10 @@
         height: fit-content;
         padding: 20px;
         border-radius: 3px;
+        max-width: 280px !important;
+        border-radius: 5px;
+        left: 50%;
+        margin: 0 auto;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         
         
