--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -287,6 +287,7 @@
 .btn_btn{
     height: 40px;
     width: 40px;
+    aspect-ratio: 1;
     display: flex;
     justify-content: center;
     background-color: var(--bg);
