--- a/src/pages/subscriptions/subscript.css
+++ b/src/pages/subscriptions/subscript.css
@@ -121,3 +121,40 @@
     color:  green;
     font-size: 1.5rem;
 }
+
+.support{
+    display: inline-block;
+}
+
+.sel_input22{
+    display: flex;
+    padding: 10px;
+    border: 1px solid #aaa;
+    align-items: center;
+    width: 95%;
+    margin: 0 auto;
+    justify-content: space-between;
+    font-size: 1.3rem;
+}
+
+.sel_input22 input{
+    width: 100px;
+    border: none;
+    outline: none;
+    font-size: 2.5rem !important;
+    font-weight: 800;
+}
+
+
+
+@media screen and (max-width: 940px){
+    .subscript_wrapper{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .sub_body_top h3{
+        font-size: 1rem;
+        width: 120px;
+    }
+}
