--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -174,6 +174,7 @@
 .sel_item label{
     padding: 4px 19px;
     background-color: white;
+    display: inline-block;
     /* border: 10px solid transparent; */
     border-radius: 7px;
     font-size: 1.1rem;
@@ -194,9 +195,9 @@
 .sel_item input[type='radio']:checked + label{
     color: white;
     background-color: var(--primary);
-    border: 10px solid var(--primary);
+    /* border: 10px solid var(--primary);
     box-shadow: inset -2px -2px 5px var(--sec),
-    inset 3px 3px 5px rgba(0, 0, 0, 0.1);
+    inset 3px 3px 5px rgba(0, 0, 0, 0.1); */
    
 }
 
@@ -286,6 +287,16 @@
     object-fit: cover;
 }
 
+.nikah_pic{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border: 1px solid #aaa */
+}
+
+.nikah_pic svg{
+    font-size: 2rem;
+}
 .btn_cancel{
     background-color: transparent;
     color: var(--primary);
