--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -10,14 +10,8 @@
     width:40px;
     height:40px;
     border-radius:10px;
-    box-shadow: -7px -7px 20px 0px #fff9,
-                /* -4px -4px 5px 0px #fff9, */
-                7px 7px 20px 0px #0002,
-                4px 4px 5px 0px #0001,
-                /* inset 0px 0px 0px 0px #fff9, */
-                inset 0px 0px 0px 0px #0001,
-                /* inset 0px 0px 0px 0px #fff9, */
-                inset 0px 0px 0px 0px #0001;
+    box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 1),
+    inset 3px 3px 5px rgba(0, 0, 0, 0.2);
     transition:box-shadow 0.6s cubic-bezier(.79,.21,.06,.81);}
     .m_button span{
       background-color:var(--primary);
@@ -43,14 +37,8 @@
     align-items:center;
     justify-content:center;
     flex-direction:column;
-    box-shadow: 0px 0px 0px 0px #fff9,
-                0px 0px 0px 0px #fff9,
-                0px 0px 0px 0px #0001,
-                0px 0px 0px 0px #0001,
-                inset -7px -7px 20px 0px #fff9,
-                inset -4px -4px 5px 0px #fff9,
-                inset 7px 7px 20px 0px #0003,
-                inset 4px 4px 5px 0px #0001;
+    box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 1),
+    inset 3px 3px 5px rgba(0, 0, 0, 0.2);
                 /* border: 1px solid red; */
                 width:40px;
                 height:40px;
