--- a/src/pages/nikah/nikah.css
+++ b/src/pages/nikah/nikah.css
@@ -128,8 +128,9 @@
     display: flex;
     align-items: center;
     padding: 1vh;
+    flex-direction: row-reverse;
     gap: 5px;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .nikah_photo{
