--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -38,6 +38,7 @@
     flex-direction: column;
     flex: 4;
     gap: 15px;
+    margin-top: 15px;
     /* border: 1px solid rgb(133, 96, 96); */
 }
 
