--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -25,11 +25,18 @@
 }
 
 .meeting_top{
-    display: none;
+    display: flex;
     align-items: center;
     gap: 15px;
-    margin-bottom: 10px;
+    width: 95%;
+    margin: 0 auto;
     font-size: 1.1rem;
+}
+
+.items_group_start{
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
 }
 
 .meetings_inner{
@@ -61,7 +68,7 @@
     width: 100%;
     padding: 20px;    
     display: grid;
-    grid-template-columns: repeat(auto-fit, 240px);
+    grid-template-columns: repeat(auto-fit, 340px);
    
     gap: 10px;
     
@@ -75,10 +82,70 @@
     justify-content: space-between;
 }
 
+.meet_part{
+    color: #aaa;
+    font-weight: 300;
+}
+
+.memb_photo{
+    width: 35px;
+    height: 35px;
+    aspect-ratio: 1;
+}
+
+.meeting_teams{
+    display: flex;
+    gap: 7px;
+}
+
+.meet_peopl{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #aaa;
+    margin-top: 5px;
+    
+}
+
+.meet_peopl svg{
+    color: #aaa;
+}
+
+.team_names{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.1rem;
+    gap: 2px;
+}
+
+.memb_photo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.team_names_wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.meeting_status{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 0 15px;
+    width: 90%;
+    margin: 0 auto;
+}
+
 .current_meeting_card{
     background-color: white;
     padding: 20px;
     display: flex;
+    border-radius: 7px;
+    height: fit-content;
     flex-direction: column;
     gap: 10px;
 }
@@ -104,19 +171,33 @@
 
 .view_meeting{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--bg);
 }
 
 .view_meeting_top{
     display: flex;
+    width: 90%;
+    margin: 0 auto;
     padding: 10px;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: center;
     /* background-color: var(--primary); */
     color: var(--primary);
     font-size: 1rem;
     gap: 10px;
+}
+
+.leave_btn{
+    padding: 9px 13px;
+    border: none;
+    background-color: red;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    color: white;
+    gap: 7px;
+    font-size: 1.1rem;
 }
 
 .meeting_action svg{
@@ -144,12 +225,15 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .view_meeting_details{
     display: flex;
-    align-items: center;
-    gap: 20px;
+    flex-direction: column;
+    /* align-items: center; */
+    gap: 2px;
 }
 
 .btn_members{
@@ -167,11 +251,49 @@
     inset 3px 3px 5px rgba(0, 0, 0, 0.2);
 }
 
+.part_info{
+    width: 65px;
+    height: 65px;
+    aspect-ratio: 1;
+    position: relative;
+}
+.part_info img{
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    object-fit: cover;
+}
+
+.part_audio{
+    position: absolute;
+    right: -5px;
+    bottom: -5px;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    font-size: 1.2rem;
+
+}
+
 .add_meeting{
     overflow: hidden;
-    width: 100%;
+    width: 60%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
+}
+
+.title{
+    margin: 15px 0;
+    border-left: 10px solid var(--primary);
+    padding-left: 5px;
+    color: var(--primary);
+    margin-left: 5px;
 }
 
 .btn_add{
@@ -198,13 +320,17 @@
 
 .participants{
     display: grid;
-    grid-template-columns: repeat(auto-fit, 20vw);
+    grid-template-columns: repeat(auto-fit, 100px);
     width: 100%;
     gap: 10px;
     justify-content: center;
     transition-property: width;
     transition-duration: 1s;
     /* border: 1px solid red; */
+}
+
+.meeting_title{
+    font-size: 2rem;
 }
 
 .open{
@@ -231,17 +357,24 @@
     width: 100%;
 }
 
-.part_info{
+.part_card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+/* .part_info{
     width: 20vw;
     height: 150px;
     position: relative;
     
-}
+} */
 
-.part_action{
+/* .part_action{
     position: absolute;
     width: 95%;
-    /* padding: 15px; */
+    padding: 15px;
     left: 0;
     bottom: 0;
     display: flex;
@@ -249,8 +382,8 @@
     align-items: center;
     left: 5px;
     bottom: 5px;
-    /* transform: translateY(-50%); */
-}
+    transform: translateY(-50%);
+} */
 
 .part_action span{
     background-color: rgba(255,255,255,0.8);
@@ -282,6 +415,14 @@
     align-items: center;
     gap: 20px;
     margin-top: 15px;
+    padding: 10px 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid var(--primary);
+    background-color: var(--bg);
+   
 }
 
 .btn_btn{
@@ -513,6 +654,10 @@
 
     .meeting_top{
             display: flex;}
+
+    .meeting_title{
+        font-size: 1.2rem;
+    }
         /* align-items: center;
         gap: 15px;
         margin-bottom: 10px;
