--- a/src/pages/health/health.css
+++ b/src/pages/health/health.css
@@ -176,6 +176,7 @@
     padding: 15px;
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: space-between;
     /* width: 100%; */
 }
