--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -188,6 +188,7 @@
     gap: 10px;
 }
 
+
 .leave_btn{
     padding: 9px 13px;
     border: none;
@@ -385,9 +386,9 @@
     transform: translateY(-50%);
 } */
 
-.part_action span{
-    background-color: rgba(255,255,255,0.8);
-    font-size: 0.8rem;
+.part_action h4{
+    /* background-color: rgba(255,255,255,0.8); */
+    font-size: 1rem;
     padding: 5px;
 }
 .part_info img{
@@ -416,13 +417,28 @@
     gap: 20px;
     margin-top: 15px;
     padding: 10px 0;
+    /* position: absolute; */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid var(--bg);
+    /* background-color: var(--bg); */
+   
+}
+
+.mtngs_actions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 15px;
+    padding: 10px 0;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     border-top: 1px solid var(--primary);
     background-color: var(--bg);
-   
 }
 
 .btn_btn{
@@ -650,6 +666,12 @@
        
         gap: 10px;
         
+    }
+
+    .add_meeting{
+    
+        width: 90%;
+    
     }
 
     .meeting_top{
