--- a/src/pages/messages/messages.css
+++ b/src/pages/messages/messages.css
@@ -8,7 +8,7 @@
 .messages_lists{
     flex: 1.5;
     background-color: white;
-    height: 100%;
+    /* height: 100%; */
     position: sticky;
     top: 60px;
     
@@ -167,8 +167,9 @@
 
 .chat_messages{
     /* background-color: white; */
-    height: 75vh;
+    height: calc(100vh - 250px);
     margin-top: 5px;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -387,6 +388,67 @@
     padding-right: 10px;
 }
 
+.video_container{
+    height: calc(100vh - 200px);
+    width: 100%;
+    /* border: 1px solid red; */
+}
+
+.btn_end{
+    width: 55px;
+    height: 55px;
+    background-color: red;
+    color: white;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 50%;
+}
+
+#videos{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1em;
+    position: relative;
+}
+
+.call_action{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 20px;
+}
+
+.video_1{
+    background-color: black;
+    width: 100%;
+    height: calc(100vh - 200px);
+    object-fit: cover;
+
+}
+
+.video_2{
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    height: 150px;
+    width: 20vw;
+    background-color: white;
+    object-fit: cover;
+}
+
+
+.call_request{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 @media screen and (max-width: 940px){
     .messages_body{
@@ -473,6 +535,16 @@
         /* left: 0; */
         width: 95%;
         margin: 0 auto;
+    }
+
+    .video_2{
+        position: absolute;
+        left: 15px;
+        top: 15px;
+        height: 100px;
+        width: 20vw;
+
+        background-color: white;
     }
     
     
