--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -13,10 +13,11 @@
     width: 95%;
     /* height: auto; */
     display: flex;
-    min-height: calc(100vh - 150px);
+    min-height: calc(100vh - 170px);
     /* border: 1px solid red; */
     margin: 0 auto;
     gap: 50px;
+    overflow-y: hidden;
     /* margin: 10px; */
 }
 
