--- a/src/pages/messages/messages.css
+++ b/src/pages/messages/messages.css
@@ -140,7 +140,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .chat_new{
