--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 }
 
 :root {
-  --primary: #0582ff;
+  --primary: #0047AB;
   --bg: #e4f2ff;
   --sec: #91c8ff;
   --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
