--- a/src/components/alert/alert.css
+++ b/src/components/alert/alert.css
@@ -70,12 +70,16 @@
     display: none;
     width: 20px;
     height: 20px;
-   
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;   
     z-index: 10;
     
 
+}
+
+.btn_alert svg{
+    font-size: 2rem;
 }
 
 
