--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -8,10 +8,12 @@
 }
 
 
-/* @media screen and (max-width: 440px){
+@media screen and (max-width: 440px){
    
 
-    .m_f_items span{
-        margin: 5px;
+    .footer_wrapper{
+        font-size: 0.8rem;
+        padding: 10px;
+        justify-content: center;
     }
-} */
+}
