--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -278,6 +278,15 @@
         display: none;
     }
 
+    .register_nav{       
+        flex-direction: column;      
+        align-items: center;
+        /* border: 1px solid red; */
+        width: 90%;
+        margin: 15px auto;
+       
+    }
+
     /* .ma_b_title{
         font-size: 4rem;
         color: var(--primary);
