--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,6 +5,23 @@
     background-color: var(--primary);
     margin-top: 10px;
     color: var(--bg);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.footer_inner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.m_f_items span:hover{
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 
@@ -13,7 +30,13 @@
 
     .footer_wrapper{
         font-size: 0.8rem;
-        padding: 10px;
         justify-content: center;
+    }
+
+    .footer_inner{
+        
+        justify-content: space-between;
+        width: 95%;
+      
     }
 }
