--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -57,13 +57,13 @@
 
     .menu_item{     
        
-        gap: 25px;       
-        font-size: 1.3rem;
+        gap: 20px !important;       
+        font-size: 1.1rem !important;
         color: white;
     }
     
     .menu_item svg{
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
   
 
