--- a/src/pages/opportunities/opports.css
+++ b/src/pages/opportunities/opports.css
@@ -64,6 +64,10 @@
     margin-bottom: 100px;
 }
 
+.opp_doctors{
+    margin-bottom: 50px;
+}
+
 .opp_doc_body{
     width: 70%;
     margin: 0 auto;
