--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--bg);
+    margin-bottom: 10px;
 }
 
 .about_inner{
@@ -18,7 +19,7 @@
  
 }
 .about_title{
-    font-size: 160px;
+    font-size: 12vw;
     -webkit-text-stroke: 4px var(--primary);
     color: transparent;
     /* background-color: #e4e4ff; */
@@ -221,7 +222,7 @@
     
 
     .about_title{
-        font-size: 4rem;
+        font-size: 3rem;
         -webkit-text-stroke: 4px var(--primary);
         color: transparent;
         /* background-color: #e4e4ff; */
