--- a/src/pages/members/members.css
+++ b/src/pages/members/members.css
@@ -1,3 +1,8 @@
+.members_wrapper{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
 .wema_grids{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -103,6 +108,17 @@
     align-items: center;
     gap: 15px;
     margin-top: 10px;
+}
+
+.member_status{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.status_ind{
+    width: 15px;height: 15px; 
+    border-radius: 50%;
 }
 
 @media screen and (max-width: 740px){
