--- a/src/pages/contacts/contacts.css
+++ b/src/pages/contacts/contacts.css
@@ -93,7 +93,7 @@
     width: 100%;
     margin: 3px 0;
     padding: 10px;
-    font-size: 16px;
+    font-size: 1.1rem;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
 
@@ -117,6 +117,8 @@
 .btn_submit:hover{
     transform: scale(1.05);
 }
+
+
 
 .contact_bottom{
     padding: 50px;
@@ -199,7 +201,7 @@
 
     .contact_bottom span{
         color: #262626;
-        font-size: 13px;
+        font-size: 1.1rem;
     }
 
     .contact_middle{
