--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -173,8 +173,22 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    justify-content: center;
 }
 
+
+@media screen and (max-width: 940px){
+    .register_nav{       
+        flex-direction: column;      
+        align-items: center;
+        /* border: 1px solid red; */
+        width: 90%;
+        margin: 0px auto;
+        padding: 10px 0;
+       
+    }
+
+}
 
 
 @media screen and (max-width: 440px){
@@ -278,15 +292,7 @@
         display: none;
     }
 
-    .register_nav{       
-        flex-direction: column;      
-        align-items: center;
-        /* border: 1px solid red; */
-        width: 90%;
-        margin: 0px auto;
-        padding: 10px 0;
-       
-    }
+  
 
     /* .ma_b_title{
         font-size: 4rem;
