--- a/src/components/alert/alert.css
+++ b/src/components/alert/alert.css
@@ -88,3 +88,29 @@
     cursor: pointer;
     background-color: #c1c1c1;
 }
+
+.message_alert_wrapper{
+    top: 40px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    position: fixed;   
+    z-index: 10;
+
+}
+
+.alert_msg_inner{
+    padding:25px;
+    background-color: var(--sec); 
+    border-left: 15px solid var(--primary);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    animation: message 0.5s;
+    color: var(--primary);
+    font-size: 1.2rem;
+    height: fit-content;
+    
+   
+    
+}
