--- a/src/components/remarks/remarks.css
+++ b/src/components/remarks/remarks.css
@@ -2,9 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 95%;
     gap: 20px;
     /* color: #aaa; */
-    margin-top: 2px;
+    margin: 0 auto;
+    padding: 10px 0;
 }
 
 .likes{
