--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -10,7 +10,7 @@
 
 
 .home_wrapper{
-    width: 95%;
+    /* width: 95%; */
     /* height: auto; */
     display: flex;
     min-height: calc(100vh - 200px);
