--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -63,6 +63,8 @@
     /* grid-template-columns: 1fr;
     justify-content: center; */
     gap: 15px;
+    width: 95%;
+    margin: 0 auto;
     /* padding: 10px; */
    
 }
@@ -129,36 +131,66 @@
     /* max-height: 200px; */
     flex-direction: column;
     gap:5px;
-    box-shadow: var(--shadow);
+    box-shadow: var(--shadow);  
+    align-items: center;
+    gap: 5px;
+   
+    
     /* margin: 15px; */
 
 }
 
 .card_body{
     display: block;
-    text-align: justify;
+    text-align: left;
+   
     font-size: 1.2rem;
     line-height: 1.3;
     margin: 5px 0;
 }
 
-.post_grids{
+.post_card_user{
+    position: relative;
+    width: 100%;
+}
+
+.card_body p{
+    width: 95%;
+    margin: 0 auto;
+}
+
+.btn_del{
+    border: none;
+    background-color: transparent;
+    color: #aaa;
+    font-size: 1.3rem;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+
+}
+
+.btn_del:hover{
+    cursor: pointer;
+    color: red;
+}
+
+
+/* .post_grids{
    width: 95%;
    margin: 0 auto;
-}
+} */
 
 .post_top{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 95%;
+    margin: 0 auto;
+    padding: 10px 0;
 
 }
 
-.post_card_user{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
 
 .card_username{
     display: flex;
@@ -368,12 +400,30 @@ audio{
 @media screen and (max-width: 940px){
   
 
-    /* .posts_wrapper{
-        display: flex;
-        gap: 10px;
-        width: 95%;
+    .post_card{
+        
+        padding: 0;
+        border-radius: 0px;
+        /* max-height: 200px; */
+        flex-direction: column;
+        gap:5px;
+        box-shadow: var(--shadow);  
+        align-items: center;
+        gap: 5px;
+       
+        
+        /* margin: 15px; */
+    
+    }
+
+    .post_grids{
+     
+      
+        width: 100%;
         margin: 0 auto;
-    } */
+      
+       
+    }
     audio{
         width: 300px;
     }
@@ -409,5 +459,7 @@ audio{
         height: auto;
       
     }
+
+    
     
 }
