--- a/src/pages/health/health.css
+++ b/src/pages/health/health.css
@@ -147,6 +147,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 20px;
+    margin-bottom: 65px;
+}
+
+.view_doctor_wrapper{
+    margin-bottom: 60px;
 }
 
 .doc_card{
