--- a/src/pages/members/members.css
+++ b/src/pages/members/members.css
@@ -126,7 +126,9 @@
         display: grid;
         grid-template-columns: 1fr;
         gap: 15px;
-        padding: 20px;
+        padding: 0px;
+        margin-bottom: 10px;
+        /* border: 1px solid red; */
     }
     
 }
