--- a/src/pages/nikah/nikah.css
+++ b/src/pages/nikah/nikah.css
@@ -78,7 +78,7 @@
     filter: blur(8px);
     -webkit-filter: blur(12px);
     width: 90%;
-    margin: 0 auto;
+    margin-bottom: 65px;
 }
 
 .nikah_search{
@@ -92,6 +92,7 @@
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 15px;
     justify-content: center;
+    margin-bottom: 65px;
    
     
 }
@@ -211,6 +212,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-top: 5px;
+    margin-bottom: 65px;
     /* border: 1px solid red; */
 }
 
@@ -363,7 +365,7 @@
     .nikah_donated{
         display: flex;
         flex-direction: column-reverse;
-        padding: 15px;
+        /* padding: 15px; */
         gap: 15px;
         justify-content: center;
         
