--- a/src/pages/health/health.css
+++ b/src/pages/health/health.css
@@ -379,6 +379,14 @@
 }
 
 
+.makala{
+    min-height: calc(100vh - 130px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 
 
 @media screen and (max-width: 440px){
