--- a/src/components/confirm/confirm.css
+++ b/src/components/confirm/confirm.css
@@ -12,7 +12,7 @@
 
 .confirm_inner{
     background-color: white;
-    margin-top: 30%;  
+    margin-top: 30px;  
     height: fit-content; 
     width: 100%;
     max-width: 500px;
