--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -196,6 +196,8 @@
         width: 100%;
         flex-direction: column;
         gap: 15px;
+        min-height: calc(100vh - 115px);
+        margin-top: 0;
         /* border: 1px solid rgb(133, 96, 96); */
     }
 
@@ -216,6 +218,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        min-height: calc(100vh - 115px);
         /* border: 1px solid black; */
         width: 100%;
     }
