--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -755,6 +755,41 @@
     justify-content: center;
 }
 
+.view_parts_outer{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 50;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
+}
+
+.view_parts_inner{
+    display: flex;
+    flex-direction: column;
+}
+
+.view_members_grids{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 60px);
+    gap: 15px;
+    
+}
+
+.view_members_body{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 90%;
+    margin: 0 auto;
+
+}
+
+
 
 
 @media screen and (max-width: 740px){
@@ -781,10 +816,17 @@
     }
 
     .add_meeting{
+        min-height: calc(100vh - 115px);
+        width: 100%;
+        /* margin-bottom: 65px; */
     
-        width: 90%;
-        margin-bottom: 65px;
+    }
+
     
+    .top_meeting_wrapper{       
+        width: auto;
+        /* padding: 20px; */
+       
     }
 
     .meeting_top{
@@ -845,8 +887,13 @@
     }
 
     .meetings_body{       
-        padding: 30px 0;
-        margin-bottom: 30px;
+        padding:  0;
+        margin-bottom: 65px;
+        /* min-height: calc(100vh - 205px); */
+    }
+
+    .meetings{
+        height: 100%;
     }
 
     .my_meetings{
