--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -188,6 +188,7 @@
         /* border: 1px solid red; */
         margin: 0 auto;
         gap: 0px;
+        padding-top: 10px;
         /* margin: 10px; */
     }
 
