--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -652,6 +652,18 @@
     color: white;
 }
 
+.msg_read{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #aaa;
+    font-size: 12px;
+    
+}
+
 .member_action{
     position: relative;
 }
