--- a/src/components/remarks/remarks.css
+++ b/src/components/remarks/remarks.css
@@ -7,13 +7,36 @@
     /* color: #aaa; */
     margin: 0 auto;
     padding: 10px 0;
+    /* border: 1px solid red; */
+}
+
+.comments{
+    display: flex;
+    gap: 5px;
+    padding: 5px 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    background-color: rgb(224, 224, 224);
+}
+
+.length{
+    height: 25px;
+    width: 25px;
+    background-color: var(--sec);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .likes{
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    /* border: 1px solid red; */
 }
 
 .liks_m{
