--- a/src/pages/questions/ques.css
+++ b/src/pages/questions/ques.css
@@ -149,9 +149,13 @@
     border-radius: 50%;
 }
 
+.p{
+    margin: 7px 0;
+}
+
 .activies_body{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 25px;
 }
 
