--- a/src/components/reviews/reviews.css
+++ b/src/components/reviews/reviews.css
@@ -3,7 +3,7 @@
     padding: 3px;
     /* margin-top: 15px; */
     border-radius: 7px;
-    /* width: 100%; */
+    width: 100%;
     /* border: 1px solid red; */
 }
 .reviews_wrapper{
@@ -20,6 +20,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.share_action_btns{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0px;
 }
 
 
@@ -40,6 +48,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.comment_input{
+    border: none;
+    outline: none;
+    background-color: transparent;
+    border-bottom: 2px solid #aaa;
+    font-size: 1.1rem;
 }
 
 .review_card{
@@ -111,7 +127,28 @@
 .review_share{
     display: flex;
     align-items: center;
+    flex-direction: column;
     gap: 15px;
+    width: 100%;
+}
+
+
+.comment_info{
+    width: 30px;
+    height: 30px;
+    aspect-ratio: 1;
+}
+
+.comment_info img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.hide_reviews{
+    width: 100% !important;
+    margin: 5px 0 !important;
 }
 
 
@@ -119,5 +156,26 @@
 @media screen and (max-width: 440px){
     .reviews_patients{
        margin: 15px auto;
+    }
+
+    .review_share{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 15px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .hide_reviews{
+        width: 90% !important;
+        margin: 5px auto !important;
+        display: block;
+    }
+
+    .patient_reviews{
+        width: 95%;
+        margin: 0 auto;
+        /* color: #aaa; */
     }
 }
