--- a/src/pages/members/members.css
+++ b/src/pages/members/members.css
@@ -99,6 +99,141 @@
 }
 
 
+.find_user{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 50;
+}
+
+.find_user_wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 95%;
+    margin: 0 auto;
+}
+
+.find_user_input{
+    border-bottom: 2px solid #aaa;
+    padding: 5px;
+    margin-top: 10px;
+}
+.input_find{
+    background-color: transparent;
+    border: none;
+    outline: none;    
+    font-size: 1.1rem;
+    width: 100%;
+    /* margin-left: 5px; */
+}
+
+.member_activities{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.member_activities_grids{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+    justify-content: center;
+}
+
+.activity_card{
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--primary);
+    color: white;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 3px;
+}
+
+.activity_card h3{
+    width: 40px;
+    height: 40px;border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    color: var(--primary);
+}
+
+.member_follows{
+    display: flex;
+    justify-content: space-between;
+}
+
+.member_followings{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+    padding: 20px;
+}
+
+.followings_grids{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 45px);
+    gap: 10px;
+}
+
+.follow_img{
+    width: 45px;
+    height: 45px;
+    aspect-ratio: 1;
+}
+
+.follow_img img{
+    width: 100%;
+    height: 100%;object-fit: cover;
+    border-radius: 50%;
+}
+
+.find_title{
+    color: var(--sec);
+}
+
+.finduser_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+    padding: 10px 0;
+}
+
+.found_user{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--sec);
+    padding: 7px;
+}
+
+.btn_ok{
+    border: none;
+    background-color: var(--primary);
+    font-size: 1.1rem;
+    color: white;
+    padding: 5px 9px;
+    border-radius: 3px;
+}
+
+.found_btns{
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+
 ._btns{
     display: flex;
     align-items: center;
@@ -167,6 +302,13 @@
     border-radius: 50%;
 }
 
+.follow_btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+}
+
 @media screen and (max-width: 740px){
     .wema_grids{
         display: grid;
@@ -175,6 +317,19 @@
         padding: 0px;
         margin-bottom: 10px;
         /* border: 1px solid red; */
+    }
+
+    .member_follows{
+        flex-direction: column;
+    }
+
+    .member_followings{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        width: 90%;
+        padding: 10px;
+        margin: 0 auto;
     }
     
 }
