--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -453,6 +453,17 @@ video{
     /* width: 50%; */
 }
 
+.share_image_container{
+    width: 90%;
+    max-width: 80vh;
+}
+
+.share_image_container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* .view_post_bofy{
     border: 1px solid red;
 } */
