--- a/src/components/reviews/reviews.css
+++ b/src/components/reviews/reviews.css
@@ -163,7 +163,7 @@
         align-items: center;
         flex-direction: column;
         gap: 15px;
-        width: 90%;
+        /* width: 90%; */
         margin: 0 auto;
     }
 
