--- a/src/pages/questions/ques.css
+++ b/src/pages/questions/ques.css
@@ -172,6 +172,12 @@
     gap: 5px;
 }
 
+.que_counts{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .activies_body{
     display: flex;
     flex-direction: column-reverse;
