--- a/src/components/reviews/reviews.css
+++ b/src/components/reviews/reviews.css
@@ -55,7 +55,8 @@
     outline: none;
     background-color: transparent;
     border-bottom: 2px solid #aaa;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    width: 100%;
 }
 
 .review_card{
@@ -64,6 +65,8 @@
     gap: 5px;
     padding: 15px;
     background-color: white;
+    box-shadow: var(--shadow);
+    border-radius: 5px;
 }
 
 .review_photo{
@@ -129,7 +132,27 @@
     align-items: center;
     flex-direction: column;
     gap: 15px;
+    margin: 10px auto;
     width: 100%;
+}
+
+.btn_2{
+    border: none;
+    background-color: transparent;
+    font-size: 1rem;
+    margin-right: 5px;
+
+}
+
+.btn_1{
+    border: none;
+    background-color: var(--primary);
+    border-radius: 25px;
+    font-size: 1rem;
+    padding: 5px 12px;
+    color: white;
+    
+    
 }
 
 
@@ -177,5 +200,14 @@
         width: 95%;
         margin: 0 auto;
         /* color: #aaa; */
+    }
+
+    .reviews_container{
+        /* background-color: #edf6ff; */
+        padding: 0;
+        margin: 15px auto;
+        border-radius: 7px;
+        /* width: 80%; */
+        /* border: 1px solid red; */
     }
 }
